minor ui fix: overflow-x hidden

--- a/nushello-www-new/src/styles/app.scss
+++ b/nushello-www-new/src/styles/app.scss
@@ -10,6 +10,7 @@ body {
   font-family: $main-font-family;
   background-color: $main-background;
   -webkit-font-smoothing: antialiased;
+  overflow-x: hidden;
 }
 
 .app-container {
