--- a/nushello-www-new/src/styles/light-bootstrap-dashboard.css
+++ b/nushello-www-new/src/styles/light-bootstrap-dashboard.css
@@ -433,7 +433,7 @@ body > .navbar-collapse[data-color="purple"]:after {
 
 .sidebar,
 .main-panel {
-  overflow: auto;
+  overflow: hidden;
   max-height: 100%;
   height: 100%;
   -webkit-transition-property: top,bottom;
